DFG JIT falls back on numerical comparisons when it does not recognize a prediction https://bugs.webkit.org/show_bug.cgi?id=68977

Reviewed by Geoffrey Garen.

This fixes both the way comparison implementations are selected. It
also fixes a bug where comparisons other than equality (like < or >)
on objects are compiled as if the comparison was equality.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compare):



Canonical link: https://commits.webkit.org/85047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96280 268f45cc-cd09-0410-ab3c-d52691b4dbfc